# ros-navigation-goals-cpp-python

./: CMakeLists.txt  README.md  package.xml
scripts/: send_goal_python.py
src/: send_goal_cpp.cpp
