<?xml version="1.0"?>
<package format="2">

  <name>navigation_goals</name>
  <version>0.0.0</version>
  <description>Send navigation goals in C++ and Python.</description>
  <author email="soroush.javadi@gmail.com">Soroush Javadi</author>
  <maintainer email="soroush.javadi@gmail.com">Soroush Javadi</maintainer>
  <url type="website">https://github.com/soroushj/ros-navigation-goals-cpp-python</url>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>actionlib_msgs</build_export_depend>
  <build_export_depend>move_base_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>

  <export>
  </export>

</package>
